extra spacing corrections in About Me

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -442,6 +442,12 @@ body {
       .back-end {
         padding-bottom: 10px;
       }
+      .currently {
+        padding-bottom: 50px;
+      }
+      .future {
+        padding-top: 50px;
+      }
     }
   }
 }
